<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.AddShipmentFragment">

    <ScrollView
        android:layout_weight="1.8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_recipient_name"
                android:layout_width="match_parent"
                android:hint="@string/recipient_name"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:hint="@string/phone"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:hint="@string/country"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_address_line_1"
                android:layout_width="match_parent"
                android:hint="@string/address_1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_address_line_2"
                android:layout_width="match_parent"
                android:hint="@string/address_2_optional"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:hint="@string/city"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_state"
                android:layout_width="match_parent"
                android:hint="@string/state"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/edt_postal_code"
                android:layout_width="match_parent"
                android:hint="@string/postal_code"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt2"
                android:paddingStart="16dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/bg_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="Save"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_bold"/>

</LinearLayout>